--- a/GameStyle.css
+++ b/GameStyle.css
@@ -37,5 +37,6 @@ h2 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-top: 5%;
     margin-bottom: 5%;
 }
